@@ -1,5 +1,6 @@
 procedure main is
    pragma template( html );
-begin
    message : constant string := "OK";
+begin
+   null;
 end main;
